# GeoProcessing_SoilPrediction

./: README.md
0.1/: BasicSetting.cpp  BasicSetting.h  CMakeLists.txt  DataTypeEnum.h  EnvDataset.cpp  EnvDataset.h  EnvLayer.cpp  EnvLayer.h  EnvUnit.cpp  EnvUnit.h  Location.cpp  Location.h  Processing.cpp  Processing.h  Program.cpp  Utility.cpp  Utility.h
ref/GDAL/PROJ/lib/: proj.lib  proj_i.lib
ref/GDAL/lib/: gdal_i.lib  geos_c_i.lib  geos_i.lib
ref/GDAL/lib/gdal 和geos联合编译(libdll)/gdal 和geos联合编译(libdll)/gdal/: gdal_i.lib
ref/GDAL/lib/gdal 和geos联合编译(libdll)/gdal 和geos联合编译(libdll)/geos/: geos_c_i.lib  geos_i.lib
ref/GDAL64/lib/: gdal_i.lib
